mudança de diretorio das imagens

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mentoria - Comunidade Brasil JUG {Devs Java}</title>
-    <link rel="icon" href="/assets/img/mini-logo.png" />
+    <link rel="icon" href="mini-logo.png" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link
       rel="stylesheet"
@@ -15,7 +15,7 @@
 
   <body>
     <header>
-      <img src="/assets/img/logo.jpg" alt="Logo Comunidade Brasil JUG {Devs Java}" />
+      <img src="logo.jpg" alt="Logo Comunidade Brasil JUG {Devs Java}" />
       <h1>Seja Mentor(a) na Comunidade Brasil JUG {Devs Java}</h1>
       <p>
         Faça parte da nossa rede de <strong>mentoria</strong> e ajude a transformar a comunidade Java no Brasil!
